--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -5,15 +7,40 @@
 }
 
 :root {
+
+    /* colors */
     --brand-color-light: #60A5FA;
     --brand-color-dark: #1D4ED8;
     --bg-color: #0F172A;
     --stroke-color: #1E293B;
     --text-color-primary: #f1f5ff;
     --text-color-secondary: #CBD5E1;
+
+    /* fonts */
+    --font-family: "Archivo", serif;
+    --h1: 800 24px/135% var(--font-family);
+    --h2: 800 16px/140% var(--font-family);
+    --h3: 800 14px/140% var(--font-family);
+    --text-span: 600 14px/145% var(--font-family);
+    --text: 16px/160% var(--font-family);
+
 }
 
 body {
+    font: var(--font-family);
     color: var(--text-color-primary);
     background-color: var(--bg-color);
+}
+
+h1, h2, h3 {
+    font: inherit;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+a:hover {
+    color: var(--brand-color-light);
 }
