--- a/styles/global.css
+++ b/styles/global.css
@@ -32,6 +32,12 @@ body {
     background-color: var(--bg-color);
 }
 
+.container {
+    max-width: 1280px;
+    padding-inline: 32px;
+    margin-inline: auto ;
+}
+
 h1, h2, h3 {
     font: inherit;
 }
@@ -43,4 +49,13 @@ a {
 
 a:hover {
     color: var(--brand-color-light);
+}
+
+/* utility first */
+.grid {
+    display: grid;
+}
+
+.grid-flow-col {
+    grid-auto-flow: column;
 }
