--- a/styles/global.css
+++ b/styles/global.css
@@ -1,59 +1,68 @@
-@import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap');
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 :root {
+  --brand-color-light: #60a5fa;
+  --brand-color-dark: #1d4ed8;
+  --bg-color: #0f172a;
+  --stroke-color: #1e293b;
+  --text-color-primary: #f1f5f9;
+  --text-color-secondary: #cbd5e1;
 
-    /* colors */
-    --brand-color-light: #60A5FA;
-    --brand-color-dark: #1D4ED8;
-    --bg-color: #0F172A;
-    --stroke-color: #1E293B;
-    --text-color-primary: #f1f5ff;
-    --text-color-secondary: #CBD5E1;
-
-    /* fonts */
-    --font-family: "Archivo", serif;
-    --h1: 800 24px/135% var(--font-family);
-    --h2: 800 16px/140% var(--font-family);
-    --h3: 800 14px/140% var(--font-family);
-    --text-span: 600 14px/145% var(--font-family);
-    --text: 16px/160% var(--font-family);
-
+  --font-family: "Archivo", sans-serif;
+  --h1: 800 24px/135% var(--font-family);
+  --h2: 800 16px/140% var(--font-family);
+  --h3: 800 14px/140% var(--font-family);
+  --text-span: 600 14px/145% var(--font-family);
+  --text: 16px/160% var(--font-family);
 }
 
 body {
-    font: var(--font-family);
-    color: var(--text-color-primary);
-    background-color: var(--bg-color);
+  font: var(--text);
+  color: var(--text-color-primary);
+  background-color: var(--bg-color);
 }
 
 img {
-    max-width: 100%;
+  max-width: 100%;
 }
 .container {
-    max-width: 1280px;
-    padding-inline: 32px;
-    margin-inline: auto ;
+  max-width: 1280px;
+  padding-inline: 32px;
+  margin-inline: auto;
 }
 
-h1, h2, h3 {
-    font: inherit;
+h1,
+h2,
+h3 {
+  font: inherit;
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 a:hover {
-    color: var(--brand-color-light);
+  color: var(--brand-color-light);
 }
 
 main {
-    margin-top: 40px;
+  margin-top: 40px;
+}
+
+.content-tag {
+  display: inline-block;
+  background-color: var(--brand-color-dark);
+  padding: 4px 8px;
+  border-radius: 4px;
+  font: 500 10px/1.2 var(--font-family);
+  text-transform: uppercase;
+  letter-spacing: 0.04em;
+  color: var(--text-color-primary);
+
+  box-shadow: 0 4px 16px #02061740;
 }
