--- a/styles/sections.css
+++ b/styles/sections.css
@@ -21,6 +21,7 @@ section header {
 }
 
 #featured {
+  grid-area: featured;
   img {
     height: 100%;
     object-fit: cover;
@@ -55,6 +56,7 @@ section header {
 }
 
 #weekly {
+  grid-area: weekly;
   & > div {
     grid-template-columns: repeat(4, 292px);
   }
@@ -77,4 +79,42 @@ section header {
       font-weight: 800;
     }
   }
+}
+
+#ai {
+  grid-area: ai;
+  img {
+    width: 176px;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+  }
+
+  h3 {
+    margin-block: 8px 4px;
+  }
+
+  p {
+    color: var(--text-color-secondary);
+  }
+}
+
+#more {
+  margin-top: 32px;
+
+  h3 {
+    margin-top: 8px;
+  }
+
+  img {
+    width: 72px;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+  }
+}
+
+aside {
+  img {
+    border-radius: 4px;
+  }
+  grid-area: aside;
 }
